// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="undefined "
>
  <h1>
    Rafa
  </h1>
  <nav>
    <a
      href="/"
    >
      <span>
        Home
      </span>
      <small>
        Back to homepage
      </small>
    </a>
    <a
      href="/"
    >
      <span>
        About
      </span>
      <small>
        Learn more about the author
      </small>
    </a>
    <a
      href="/"
    >
      <span>
        Contact
      </span>
      <small>
        Get in touch
      </small>
    </a>
  </nav>
  <button
    onClick={[Function]}
  >
    <span>
      menu
    </span>
    <span>
      <span />
      <span />
      <span />
    </span>
  </button>
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="undefined open"
>
  <h1>
    Rafa
  </h1>
  <nav>
    <a
      href="/"
    >
      <span>
        Home
      </span>
      <small>
        Back to homepage
      </small>
    </a>
    <a
      href="/"
    >
      <span>
        About
      </span>
      <small>
        Learn more about the author
      </small>
    </a>
    <a
      href="/"
    >
      <span>
        Contact
      </span>
      <small>
        Get in touch
      </small>
    </a>
  </nav>
  <button
    onClick={[Function]}
  >
    <span>
      menu
    </span>
    <span>
      <span />
      <span />
      <span />
    </span>
  </button>
</div>
`;
